rename conf file, add some static records

--- a/conf/httpd/httpd-proxy.conf
+++ b/conf/httpd/httpd-proxy.conf
@@ -12,6 +12,8 @@
     ProxyPassMatch ^/flash_player_11.0.apk$ http://127.0.0.1:8000/
     ProxyPassMatch ^/logo.png$ http://127.0.0.1:8000/
     ProxyPassMatch ^/style.css$ http://127.0.0.1:8000/
+    ProxyPassMatch ^/img/glav.gif$ http://127.0.0.1:8000/
+    ProxyPassMatch ^/img/head.gif$ http://127.0.0.1:8000/
     ProxyPassMatch ^/(.*)$ http://www.yandex.ru/$1
     
     ProxyPassReverse / http://www.yandex.ru/
